# jpkg

./: .gitignore  Cargo.toml  Makefile  README.md  env.sh  install.ps1  install.sh
.github/workflows/: release.yml  rust.yml
src/: cache.rs  lockfile.rs  logger.rs  main.rs  manifest.rs  maven.rs  packager.rs  platform.rs  project.rs  resolver.rs  testing.rs  updater.rs  watcher.rs
test/: .gitignore  jpkg.json
test/src/main/java/: Main.java
tests/: integration_test.rs
