[package]
name = "jpkg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] } # using blocking for simplicity initially, or async? Plan said tokio.
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.18.3"
quick-xml = { version = "0.38.4", features = ["serialize"] }
varisat = "0.2"
dialoguer = "0.12"
colored = "3.0"
notify = "8.2.0"          # File watching
sha2 = "0.11.0-rc.3"           # SHA256 for lock file
zip = "6.0.0"             # JAR creation
serde_yaml = "0.9"      # For Gradle import
roxmltree = "0.21.1"      # For pom.xml parsing
hex = "0.4"               # For SHA256 encoding
dirs = "6.0"              # For home directory
anyhow = "1.0"
thiserror = "2.0.17"
generic-array = "1.3.5"

[dev-dependencies]
tempfile = "3.0"      # Temp directories for tests
assert_cmd = "2.0"    # CLI testing
predicates = "3.0"    # Test assertions
